fixed image overflow

--- a/css/index.css
+++ b/css/index.css
@@ -27,7 +27,7 @@ Home page
 
     .code img {
         overflow: hidden;
-        width: 400%;
+        width: 100%;
     }
 }
 
